# rigpay

./: .gitignore  CLAUDE.md  README.md  STATUS.md  services.example.toml
adapters/: gpu_infer.sh  store_blob.sh
agent/: README.md  config.example.toml
agent/shared/skills/rende/rende-operator/: SKILL.md
agent/shared/sops/daily-reconciliation/: SOP.toml
agent/shared/sops/refund-review/: SOP.toml
agent/workspace/: AGENTS.md
docs/: adapters.md  buildlog.md  setup.md  threat-model.md
gateway/: Cargo.toml
gateway/src/: adapter.rs  config.rs  lib.rs  main.rs  server.rs  solana.rs
gateway/tests/: paid_flow.rs
