[package]
name = "rigpay-gateway"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "x402 paywall gateway: sells machine services for USDC on Solana, receive-only"

[dependencies]
anyhow = "1"
axum = "0.8"
bs58 = "0.5"
chrono = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "fs", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
